--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,12 +1,10 @@
 <IfModule mod_rewrite.c>
-    Options -MultiViews
-    RewriteEngine On
+    Options +FollowSymLinks
+	RewriteEngine On
 
-    RewriteBase /
+	RewriteCond %{REQUEST_FILENAME} !-d
+	RewriteRule ^(.+)/$ http://%{HTTP_HOST}/$1 [R=301,L]
 
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.+)/$ http://%{HTTP_HOST}/$1 [R=301,L]
-
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
+	RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteRule ^ index.php [L]
 </IfModule>
